--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^2.1.3",
     "@mui/icons-material": "^5.15.18",
+    "@nextui-org/react": "^2.3.6",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.13",
@@ -22,7 +23,10 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-hooks-global-state": "^2.1.0"
+    "react-hooks-global-state": "^2.1.0",
+    "react-icons": "^5.2.1",
+    "react-ripples": "^2.2.1",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@types/node": "^20",
