--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ant-design/icons": "^5.3.7",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@headlessui/react": "^2.0.3",
@@ -20,22 +19,34 @@
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.13",
     "antd": "^5.17.3",
+    "dat.gui": "^0.7.9",
     "next": "14.2.3",
-    "react": "^18",
-    "react-dom": "^18",
+    "play-sound": "^1.1.6",
+    "react": "^19.0.0-rc-6f23540c7d-20240528",
+    "react-dom": "^19.0.0-rc-6f23540c7d-20240528",
     "react-hooks-global-state": "^2.1.0",
     "react-icons": "^5.2.1",
     "react-ripples": "^2.2.1",
-    "swr": "^2.2.5"
+    "react-tooltip": "^5.26.4",
+    "swr": "^2.2.5",
+    "three": "^0.164.1"
   },
   "devDependencies": {
+    "@parcel/config-default": "^2.4.0",
+    "@types/dat.gui": "^0.7.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/three": "^0.164.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "parcel": "^2.7.0",
+    "parcel-reporter-static-files-copy": "^1.3.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "staticFiles": {
+    "staticOutPath": "assets"
   }
 }
