--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "dat.gui": "^0.7.9",
     "next": "14.2.3",
     "play-sound": "^1.1.6",
-    "react": "^19.0.0-rc-6f23540c7d-20240528",
-    "react-dom": "^19.0.0-rc-6f23540c7d-20240528",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hooks-global-state": "^2.1.0",
     "react-icons": "^5.2.1",
     "react-ripples": "^2.2.1",
@@ -43,6 +43,8 @@
     "parcel": "^2.7.0",
     "parcel-reporter-static-files-copy": "^1.3.4",
     "postcss": "^8",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
