--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.13",
     "antd": "^5.17.3",
-    "dat.gui": "^0.7.9",
     "next": "14.2.3",
     "play-sound": "^1.1.6",
     "react": "^18.3.1",
@@ -28,16 +27,13 @@
     "react-icons": "^5.2.1",
     "react-ripples": "^2.2.1",
     "react-tooltip": "^5.26.4",
-    "swr": "^2.2.5",
-    "three": "^0.164.1"
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@parcel/config-default": "^2.4.0",
-    "@types/dat.gui": "^0.7.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/three": "^0.164.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "parcel": "^2.7.0",
